tests/mm0_mmu/pass/whitespace2.mm0
--    v-- this is a NEWLINE '\n'
sort s
;
