tests/mm0_mmu/fail/bad-whitespace1.mm0
--     v-- this is a TAB
sort s	;
